# Tiny_Diffusion

./: .gitignore  README.md  app.py  main.py  pyproject.toml
notebook/: 3dUnet.ipynb  3d_DDPM_train.ipynb  DDPM.ipynb  unet.ipynb
src/: Data_preprocessing.py  inference.py  network.py  train.py  user_img_preprocessor.py
