[project]
name = "tiny-img-to-vid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "gradio>=6.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
